fix(lint): Fixed ansible-lint issues

--- a/tasks/01_install.yml
+++ b/tasks/01_install.yml
@@ -2,7 +2,7 @@
 - name: Install tmux
   block:
     - name: Include OS-specific variables
-      include_vars: "{{ var_file }}"
+      ansible.builtin.include_vars: "{{ var_file }}"
       with_first_found:
         - "{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml"
         - "{{ ansible_os_family }}-{{ ansible_distribution_major_version }}.yml"
