--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,6 +4,9 @@ tmux_config_file: "{{ tmux_config_dir }}/tmux.conf"
 tmux_install_method: "package"
 tmux_shell: "{{ ansible_shell_type }}"
 
+tmux_plugin_tpm_version: "3.1.0"
 tmux_plugin_dir: "{{ tmux_config_dir }}/plugins"
 tmux_plugin_tpm_repo: "https://github.com/tmux-plugins/tpm"
-tmux_plugin_tpm_version: "v3.1.0"
+tmux_plugins: []
+# - name: "vim-tmux-navigator"
+#   namespace: "christoomey"
