fix: Ensure idempotency for plugin installation

--- a/tasks/03_install_plugins.yml
+++ b/tasks/03_install_plugins.yml
@@ -23,7 +23,9 @@
   loop_control:
     loop_var: plugin
 
-- name: Install tmux plugins if missing
+- name: Install missing tmux plugins
   ansible.builtin.command:
     cmd: "{{ tmux_plugin_dir }}/tpm/bin/install_plugins"
+  register: tmux_plugins_install
+  changed_when: "'download success' in tmux_plugins_install.stdout"
   when: tmux_plugin_stat.results | selectattr('stat.exists', 'equalto', false) | list | length > 0
