feat: Addition of python version in renovate

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -12,8 +12,14 @@
       "automergeType": "pr"
     },
     {
-      "matchManagers": ["ansible-galaxy"],
+      "matchManagers": ["custom.regex", "ansible-galaxy"],
       "automerge": false
+    },
+    {
+      "matchManagers": ["custom.regex"],
+      "matchDepNames": ["python/cpython"],
+      "automerge": true,
+      "automergeType": "pr"
     }
   ],
   "enabledManagers": [
@@ -28,5 +34,19 @@
   },
   "assignees": [
     "pluggero"
+  ],
+  "customManagers": [
+    {
+      "customType": "regex",
+      "managerFilePatterns": [
+        "\\.github/workflows/.+\\.ya?ml$"
+      ],
+      "matchStrings": [
+        "python-version:\\s+[\"'](?<currentValue>\\d+\\.\\d+)[\"']"
+      ],
+      "datasourceTemplate": "github-tags",
+      "depNameTemplate": "python/cpython",
+      "versioningTemplate": "semver"
+    }
   ]
 }
