feat: Added additional configuration options

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,10 +2,23 @@
 tmux_config_dir: "{{ ansible_env.HOME }}/.config/tmux"
 tmux_config_file: "{{ tmux_config_dir }}/tmux.conf"
 tmux_install_method: "package"
+
 tmux_shell: "{{ ansible_user_shell }}"
+tmux_prefix: "C-b"
+tmux_split_horizontal: "%"
+tmux_split_vertical: '"'
+tmux_key_bindings: []
+# - key: "C-l"
+#   command: "send-keys 'C-l'"
+#   flags: "-n"
+# - key: "C-y"
+#   command: >-
+#     copy-mode \; send-keys -X cursor-up \; send-keys -X search-backward "$USER"
+#   flags: "-n"
 
 tmux_plugin_tpm_version: "3.1.0"
 tmux_plugin_dir: "{{ tmux_config_dir }}/plugins"
+tmux_plugin_tpm_config: "{{ ansible_env.HOME }}/.config/tmux/plugins/tpm/tpm"
 tmux_plugin_tpm_repo: "https://github.com/tmux-plugins/tpm"
 tmux_plugins: []
 # - name: "vim-tmux-navigator"
