--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -18,7 +18,7 @@ tmux_key_bindings: []
 
 tmux_plugin_tpm_version: "3.1.0"
 tmux_plugin_dir: "{{ tmux_config_dir }}/plugins"
-tmux_plugin_tpm_config: "{{ ansible_env.HOME }}/.config/tmux/plugins/tpm/tpm"
+tmux_plugin_tpm_config: "~/.config/tmux/plugins/tpm/tpm"
 tmux_plugin_tpm_repo: "https://github.com/tmux-plugins/tpm"
 tmux_plugins: []
 # - name: "vim-tmux-navigator"
