--- a/tasks/noauto_install_dep_Debian.yml
+++ b/tasks/noauto_install_dep_Debian.yml
@@ -5,7 +5,6 @@
   when: ansible_pkg_mgr != "apt"
 
 - name: Install tmux dependencies via apt
-  when: ansible_pkg_mgr == "apt"
   block:
     - name: Update apt cache
       ansible.builtin.apt:
@@ -15,6 +14,9 @@
 
     - name: Ensure tmux dependencies are installed
       ansible.builtin.apt:
-        name: "{{ tmux_dep_pkgs }}"
+        name: "{{ package }}"
         state: present
+      loop: "{{ tmux_dep_pkgs }}"
+      loop_control:
+        loop_var: package
       become: true
