--- a/tasks/noauto_install_package.yml
+++ b/tasks/noauto_install_package.yml
@@ -2,10 +2,10 @@
 - name: Install tmux OS-specifically via package
   ansible.builtin.include_tasks: "{{ var_file }}"
   with_first_found:
-    - "noauto_install_{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml"
-    - "noauto_install_{{ ansible_os_family }}-{{ ansible_distribution_major_version }}.yml"
-    - "noauto_install_{{ ansible_distribution }}.yml"
-    - "noauto_install_{{ ansible_os_family }}.yml"
-    - "noauto_install_{{ ansible_lsb.id }}.yml"
+    - "{{ role_path }}/tasks/noauto_install_{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml"
+    - "{{ role_path }}/tasks/noauto_install_{{ ansible_os_family }}-{{ ansible_distribution_major_version }}.yml"
+    - "{{ role_path }}/tasks/noauto_install_{{ ansible_distribution }}.yml"
+    - "{{ role_path }}/tasks/noauto_install_{{ ansible_os_family }}.yml"
+    - "{{ role_path }}/tasks/noauto_install_{{ ansible_lsb.id }}.yml"
   loop_control:
     loop_var: var_file
