fix: Fixed multi-line keybinding

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -9,11 +9,11 @@ tmux_split_horizontal: "%"
 tmux_split_vertical: '"'
 tmux_key_bindings: []
 # - key: "C-l"
-#   command: "send-keys 'C-l'"
+#   command: "send 'C-l'"
 #   flags: "-n"
 # - key: "C-y"
 #   command: >-
-#     copy-mode \; send-keys -X cursor-up \; send-keys -X search-backward "$USER"
+#     copy-mode \; send -X cursor-up \; send -X search-backward "$USER"
 #   flags: "-n"
 
 tmux_plugin_tpm_version: "3.1.0"
